Adicionando editorconfig, ajustando animação do sprite temporário da moeda e iniciando uma ideia de fila de movimentos, ainda não funcional

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="sprite.js"></script>
     <script src="robot.js"></script>
     <script src="board.js"></script>
+    <script src="movement.js"></script>
     <script src="game.js"></script>
     </script>
 </body>
