Adicionando uma fila de movimentos, já sendo processada pelo robô

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="gameContext.js"></script>
     <script src="cell.js"></script>
     <script src="sprite.js"></script>
+    <script src="movementQueue.js"></script>
     <script src="robot.js"></script>
     <script src="board.js"></script>
     <script src="movement.js"></script>
